Improved StartServer with a better command parsing system.